Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -177,8 +177,6 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
-<li>$:/state/sidebar</li>
-
 <li>$:/status/IsAnonymous</li>
 
 <li>$:/status/IsLoggedIn</li>
@@ -394,6 +392,8 @@ Error message and password prompt
 <li>Overview of Supervised Learning</li>
 
 <li>PaaS</li>
+
+<li>Papers on Hierarchical Reinforcement Learning</li>
 
 <li>Path Connectedness</li>
 
@@ -9989,9 +9989,6 @@ Error message and password prompt
 <div created="20191119201741688" modified="20191119201751499" title="$:/SiteTitle" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Sid's ~TiddlyWiki</pre>
 </div>
-<div created="20200228001751266" modified="20200228012154634" title="$:/state/sidebar" revision="2" bag="default">
-<pre>yes</pre>
-</div>
 <div title="$:/status/IsAnonymous" revision="1" bag="default">
 <pre>yes</pre>
 </div>
@@ -10004,7 +10001,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div list="" title="$:/StoryList" revision="10" bag="default">
+<div list="[[Papers on Hierarchical Reinforcement Learning]] Welcome [[How to Contribute?]]" title="$:/StoryList" revision="3" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -10052,11 +10049,11 @@ Error message and password prompt
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;1440&quot;
+            &quot;text&quot;: &quot;1920&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;900&quot;
+            &quot;text&quot;: &quot;1080&quot;
         },
         &quot;$:/info/browser/language&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/language&quot;,
@@ -13714,6 +13711,23 @@ In April 2008, Google launched App Engine, with a free trial version limited to 
 
 The original intent of PaaS was to simplify the code-writing process for developers, with the infrastructure and operations handled by the PaaS provider. Originally, all ~PaaSes were in the public cloud. Because many companies did not want to have everything in the public cloud, private and hybrid PaaS options (managed by internal IT departments) were created.</pre>
 </div>
+<div created="20200229034825603" modified="20200229040124762" tags="[[reinforcement learning]]" title="Papers on Hierarchical Reinforcement Learning" revision="1" bag="default">
+<pre>* Overview of the field (March 2019): https://thegradient.pub/the-promise-of-hierarchical-reinforcement-learning/ 
+
+* Hierarchical Reinforcement and Imitation Learning (June 2018): https://arxiv.org/pdf/1803.00590.pdf
+
+* Discovering Hierarchies using Imitation Learning from Hierarchy Aware Policies (August 2019): https://arxiv.org/pdf/1812.00225.pdf
+
+* Modulated Policy Hierarchies (November 2018): https://arxiv.org/pdf/1812.00025.pdf
+
+* Sub-Policy Adaptation for Hierarchical Reinforcement Learning (November 2019): https://arxiv.org/pdf/1906.05862.pdf
+
+* Meta-Learning Shared Hierarchies (October 2017): https://arxiv.org/pdf/1710.09767.pdf
+
+* Near-Optimal Representation Learning for Hierarchical Reinforcement Learning (January 2019): https://arxiv.org/pdf/1810.01257.pdf
+
+* Why does Hierarchy (sometimes) work so well in Reinforcement Learning? (December 2020): https://arxiv.org/pdf/1909.10618.pdf</pre>
+</div>
 <div created="20200227075022683" modified="20200227080320938" tags="topology" title="Path Connectedness" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Intuition: A formalism of the idea that a geometric figure is all one piece if it is possible to go from any point to any other point via a curve that never leaves the figure
 
@@ -14132,7 +14146,7 @@ Decidability of QTL formula - programs without nondeterminism, </pre>
 <div created="20200131072027431" modified="20200131072106707" tags="incomplete [[real analysis]]" title="Real Numbers" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre></pre>
 </div>
-<div created="20200228001353654" modified="20200228011930318" tags="[[talk summary]] [[reinforcement learning]]" title="Recent Progress in Model-Based Learning by Csaba Szepesvari" revision="2" bag="default">
+<div created="20200228001353654" modified="20200228011931519" tags="[[talk summary]] [[reinforcement learning]]" title="Recent Progress in Model-Based Learning by Csaba Szepesvari" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Reinforcement Learning defined as a field that solves certain types of Tasks: 
 
 * Online RL - Given: sequential access to M, Goal: Take actions to maximize expected return 
