--- a/index.html
+++ b/index.html
@@ -179,6 +179,8 @@ Error message and password prompt
 
 <li>$:/state/sidebar</li>
 
+<li>$:/state/tab/sidebar--595412856</li>
+
 <li>$:/status/IsAnonymous</li>
 
 <li>$:/status/IsLoggedIn</li>
@@ -335,6 +337,8 @@ Error message and password prompt
 
 <li>Introduction to Lisp</li>
 
+<li>Introduction to Mathematical Logic</li>
+
 <li>Introduction to Reinforcement Learning</li>
 
 <li>K Nearest Neighbors</li>
@@ -435,6 +439,8 @@ Error message and password prompt
 
 <li>Properties of Real World Networks</li>
 
+<li>Propositional Logic</li>
+
 <li>Quantum Temporal Logic by Nengkun Yu</li>
 
 <li>Real Numbers</li>
@@ -500,6 +506,8 @@ Error message and password prompt
 <li>UCLA CS M151B - Computer Architecture</li>
 
 <li>UCLA CS M282A - Cryptography 1</li>
+
+<li>UCLA Math 114L - Mathematical Logic</li>
 
 <li>UCLA Math 115A - Linear Algebra</li>
 
@@ -10011,8 +10019,11 @@ Error message and password prompt
 <div created="20191119201741688" modified="20191119201751499" title="$:/SiteTitle" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Sid's ~TiddlyWiki</pre>
 </div>
-<div created="20200404185505682" modified="20200404190937282" title="$:/state/sidebar" revision="2" bag="default">
+<div created="20200404185505682" modified="20200405230318034" title="$:/state/sidebar" revision="4" bag="default">
 <pre>yes</pre>
+</div>
+<div created="20200404190942433" modified="20200404190942433" title="$:/state/tab/sidebar--595412856" revision="1" bag="default">
+<pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div title="$:/status/IsAnonymous" revision="1" bag="default">
 <pre>yes</pre>
@@ -10026,7 +10037,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20200404042843416" list="" modified="20200404185434229" title="$:/StoryList" revision="17" bag="default">
+<div created="20200404042843416" list="[[UCLA Math 114L - Mathematical Logic]] [[Introduction to Mathematical Logic]] [[Propositional Logic]]" modified="20200405230423015" title="$:/StoryList" revision="56" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -12711,6 +12722,22 @@ let v/s let*
 
 </pre>
 </div>
+<div created="20200405221831913" modified="20200405230624347" tags="[[UCLA Math 114L - Mathematical Logic]] logic math" title="Introduction to Mathematical Logic" revision="4" bag="default">
+<pre>Formal Logical System:
+
+* Collection of symbols
+* Syntax - how symbols can be put together to make well-formed strings
+* Semantics - how we derive meaning from well-formed strings of symbols
+
+Example:
+
+Programming language:
+
+* Symbols - anything on your keyboard
+* Syntax - syntax of the language
+* Semantics - how your machine implements the program
+</pre>
+</div>
 <div created="20200211210217680" modified="20200222063802153" tags="[[reinforcement learning]]" title="Introduction to Reinforcement Learning" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>__[[About Reinforcement Learning]]__
 
@@ -14441,6 +14468,9 @@ Transitivity and the clustering coefficient:
 * $$C = \frac{\text{num of closed paths of length 2}}{\text{num of paths of length 2}} = \frac{\text{num of triangles} \times 6}{\text{num of paths of length 2}} =  \frac{\text{num of triangles} \times 3}{\text{num of connected triangles}}$$
 * Social networks have high values of clustering coefficient like 0.2 till 0.5 or 0.6</pre>
 </div>
+<div created="20200405222045199" modified="20200405230348121" tags="[[UCLA Math 114L - Mathematical Logic]] logic math" title="Propositional Logic" revision="3" bag="default">
+<pre></pre>
+</div>
 <div created="20200131001522764" modified="20200131030522424" tags="[[needs formatting]] [[talk summary]] [[quantum computing]]" title="Quantum Temporal Logic by Nengkun Yu" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Quantum Shock - Quantum computing can solve halting problem (Ji-Natarajan)
 
@@ -15679,6 +15709,10 @@ Partially Observable Environments - indirectly observes environment (e.g. poker 
 </div>
 <div created="20191121010859851" modified="20191121011220661" tags="" title="UCLA CS M282A - Cryptography 1" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre></pre>
+</div>
+<div created="20200405194525208" modified="20200405230339110" tags="math ucla" title="UCLA Math 114L - Mathematical Logic" revision="4" bag="default">
+<pre># [[Introduction to Mathematical Logic]]
+# [[Propositional Logic]]</pre>
 </div>
 <div author="Siddharth Joshi" created="20191120202501607" modified="20200115174134338" tags="incomplete math [[linear algebra]] ucla" title="UCLA Math 115A - Linear Algebra" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>!!! Syllabus
