Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -177,12 +177,6 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
-<li>$:/state/showeditpreview</li>
-
-<li>$:/state/sidebar</li>
-
-<li>$:/state/tab/sidebar--595412856</li>
-
 <li>$:/status/IsAnonymous</li>
 
 <li>$:/status/IsLoggedIn</li>
@@ -434,6 +428,8 @@ Error message and password prompt
 <li>Policy Gradient Methods</li>
 
 <li>Policy Iteration</li>
+
+<li>Problem Solving using Search</li>
 
 <li>Problems that RL needs to solve</li>
 
@@ -10021,15 +10017,6 @@ Error message and password prompt
 <div created="20191119201741688" modified="20191119201751499" title="$:/SiteTitle" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Sid's ~TiddlyWiki</pre>
 </div>
-<div created="20200405230821071" modified="20200405230821071" title="$:/state/showeditpreview" revision="1" bag="default">
-<pre>yes</pre>
-</div>
-<div created="20200404185505682" modified="20200406033624711" title="$:/state/sidebar" revision="6" bag="default">
-<pre>yes</pre>
-</div>
-<div created="20200404190942433" modified="20200404190942433" title="$:/state/tab/sidebar--595412856" revision="1" bag="default">
-<pre>$:/core/ui/SideBar/Recent</pre>
-</div>
 <div title="$:/status/IsAnonymous" revision="1" bag="default">
 <pre>yes</pre>
 </div>
@@ -10042,7 +10029,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20200404042843416" list="[[UCLA Math 114L - Mathematical Logic]] [[Propositional Logic]]" modified="20200405230706432" title="$:/StoryList" revision="81" bag="default">
+<div created="20200407170756702" list="[[UCLA CS 161 - Fundamentals of Artificial Intelligence]] [[Problem Solving using Search]] Welcome [[How to Contribute?]]" modified="20200407170813860" title="$:/StoryList" revision="9" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -10103,7 +10090,7 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200404042839987" modified="20200404190938854" title="$:/temp/search" revision="11" bag="default">
+<div created="20200407170753503" modified="20200407171103740" title="$:/temp/search" revision="6" bag="default">
 <pre></pre>
 </div>
 <div created="20200227023745997" modified="20200227023751835" title="$:/theme" type="text/vnd.tiddlywiki" revision="0" bag="default">
@@ -12633,7 +12620,7 @@ __[[Simulation-Based Search]]__
 
 {{Simulation-Based Search}}</pre>
 </div>
-<div created="20200404185457513" modified="20200404190920149" tags="[[UCLA CS 161 - Fundamentals of Artificial Intelligence]] [[artificial intelligence]]" title="Introduction to Artificial Intelligence" revision="2" bag="default">
+<div created="20200404185457513" modified="20200404190921236" tags="[[UCLA CS 161 - Fundamentals of Artificial Intelligence]] [[artificial intelligence]]" title="Introduction to Artificial Intelligence" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>The Intelligent Agent Architecture: https://imgur.com/5FOvphf
 
 Knowledge Representation:
@@ -12727,7 +12714,7 @@ let v/s let*
 
 </pre>
 </div>
-<div created="20200405221831913" modified="20200405230726197" tags="[[UCLA Math 114L - Mathematical Logic]] logic math" title="Introduction to Mathematical Logic" revision="5" bag="default">
+<div created="20200405221831913" modified="20200405230727265" tags="[[UCLA Math 114L - Mathematical Logic]] logic math" title="Introduction to Mathematical Logic" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Formal Logical System:
 
 * Collection of symbols
@@ -14142,7 +14129,7 @@ In April 2008, Google launched App Engine, with a free trial version limited to 
 
 The original intent of PaaS was to simplify the code-writing process for developers, with the infrastructure and operations handled by the PaaS provider. Originally, all ~PaaSes were in the public cloud. Because many companies did not want to have everything in the public cloud, private and hybrid PaaS options (managed by internal IT departments) were created.</pre>
 </div>
-<div created="20200229034825603" modified="20200404042916331" tags="[[reinforcement learning]]" title="Papers on Hierarchical Reinforcement Learning" type="text/vnd.tiddlywiki" revision="1" bag="default">
+<div created="20200229034825603" modified="20200404042917413" tags="[[reinforcement learning]]" title="Papers on Hierarchical Reinforcement Learning" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>* Overview of the field (March 2019): https://thegradient.pub/the-promise-of-hierarchical-reinforcement-learning/ 
 
 * Hierarchical Reinforcement and Imitation Learning (June 2018): https://arxiv.org/pdf/1803.00590.pdf
@@ -14384,6 +14371,13 @@ Extensions to Policy Iteration:
 * Modifying Policy Iteration - consider epsilon convergence of value function? or simply stop after k iterations of iterative policy evaluation?, basic idea is to stop early as we may not need to know the value function to complete accuracy (and in the most extreme case just stop after k = 1, update policy every iteration - equivalent to - [[Value Iteration]])
 * Generalized Policy Iteration - https://imgur.com/cfEMFw0</pre>
 </div>
+<div created="20200407170824959" modified="20200407171107909" tags="[[UCLA CS 161 - Fundamentals of Artificial Intelligence]]" title="Problem Solving using Search" revision="2" bag="default">
+<pre>Problems can be formulated as search problems: https://imgur.com/lWiwKr2 - then given to a search engine with a search strategy to obtain a knowledge
+
+
+
+</pre>
+</div>
 <div created="20200212013035576" modified="20200212013205444" tags="[[reinforcement learning]] [[Introduction to Reinforcement Learning]]" title="Problems that RL needs to solve" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Two fundamental problems in sequential decision making:
 
@@ -14474,7 +14468,7 @@ Transitivity and the clustering coefficient:
 * $$C = \frac{\text{num of closed paths of length 2}}{\text{num of paths of length 2}} = \frac{\text{num of triangles} \times 6}{\text{num of paths of length 2}} =  \frac{\text{num of triangles} \times 3}{\text{num of connected triangles}}$$
 * Social networks have high values of clustering coefficient like 0.2 till 0.5 or 0.6</pre>
 </div>
-<div created="20200405222045199" modified="20200406033319556" tags="[[UCLA Math 114L - Mathematical Logic]] logic math" title="Propositional Logic" type="text/vnd.tiddlywiki" revision="14" bag="default">
+<div created="20200405222045199" modified="20200406191620893" tags="[[UCLA Math 114L - Mathematical Logic]] logic math" title="Propositional Logic" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Propositional Logic - the mathematical object PL
 
 __Symbols__
@@ -14556,6 +14550,14 @@ Misspellings and abbreviations:
 
 * not putting the correct amount of brackets
 * [] - used to complete all extraneous brackets
+* abbreviation - biconditional - $$(\phi \leftrightarrow \psi) :\equiv ((\phi \leftarrow \psi) \land (\phi \rightarrow \psi))$$
+
+__Semantics__
+
+* Let $$B = \{ 0, 1 \}$$ - 0 stands for falsity, 1 stands for truth
+* The semantics of the system PL will describe the formal rules to determine the truth values fo a formula $$\phi$$ given truth values for all the propositional variables which occur in $$\phi$$
+* Formally, for each formula $$\phi$$ and each list $$\vec{p} = p_1, ..., p_n$$ which includes all the variables in $$\phi$$, $$F_{\phi; \vec{p}}(\vec{x}) = 1 \iff \phi$$ is true and each has $$p_i$$ has truth value $$x_i$$ and conversely $$F_{\phi; \vec{p}}(\vec{x}) = 0$$ is the same but $$\phi$$ is false
+
 
 </pre>
 </div>
@@ -15753,9 +15755,10 @@ Partially Observable Environments - indirectly observes environment (e.g. poker 
 * [[Path Connectedness]]
 </pre>
 </div>
-<div created="20200402185643352" modified="20200404185432692" tags="ucla [[artificial intelligence]]" title="UCLA CS 161 - Fundamentals of Artificial Intelligence" type="text/vnd.tiddlywiki" revision="1" bag="default">
+<div created="20200402185643352" modified="20200407170812552" tags="ucla [[artificial intelligence]]" title="UCLA CS 161 - Fundamentals of Artificial Intelligence" type="text/vnd.tiddlywiki" revision="1" bag="default">
 <pre># [[Introduction to Artificial Intelligence]]
-# [[Introduction to Lisp]]</pre>
+# [[Introduction to Lisp]]
+# [[Problem Solving using Search]]</pre>
 </div>
 <div created="20200131000351410" modified="20200312211523121" tags="[[computer science]] ucla" title="UCLA CS 201 Winter 2020" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre># [[Explainable AI: Making Visual Question Answering Systems More Transparent by Raymond J. Mooney]]
@@ -15798,7 +15801,7 @@ Partially Observable Environments - indirectly observes environment (e.g. poker 
 <div created="20191121010859851" modified="20191121011220661" tags="" title="UCLA CS M282A - Cryptography 1" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre></pre>
 </div>
-<div created="20200405194525208" modified="20200405230339110" tags="math ucla" title="UCLA Math 114L - Mathematical Logic" revision="4" bag="default">
+<div created="20200405194525208" modified="20200405230340185" tags="math ucla" title="UCLA Math 114L - Mathematical Logic" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre># [[Introduction to Mathematical Logic]]
 # [[Propositional Logic]]</pre>
 </div>
